add and subtract buttons working on cart page

--- a/shopcart.html
+++ b/shopcart.html
@@ -43,122 +43,29 @@
         </div>
     </header>
     <main>
-        <article class="product">
-            <section class="allInfos">
-                <img src="https://cdnm.westwing.com.br/glossary/uploads/br/2015/10/16182357/panelas-amarelas-pinterest-c-a4694.jpg" alt="Panela">
-                <div class="infos">
-                    <p>Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm</p>
-                    <div class="quantity">
-                        <p>R$ 29,99</p>
-                        <div class="quantityContainer">
-                            <p>Quantidade:</p>
-                            <span>10</span>
-                            <div class="quantityIcons">
-                                <figure>
-                                    <img src="assets/plus_circle_dark.svg" alt="Icone de mais">
-                                </figure>
-                                <figure>
-                                    <img src="assets/subs_circle_dark.svg" class="icon" alt="Icone de menos">
-                                </figure>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <div class="line productLine"></div>
-        </article>
-        <article class="product">
-            <section class="allInfos">
-                <img src="https://cdnm.westwing.com.br/glossary/uploads/br/2015/10/16182357/panelas-amarelas-pinterest-c-a4694.jpg" alt="Panela">
-                <div class="infos">
-                    <p>Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm</p>
-                    <div class="quantity">
-                        <p>R$ 29,99</p>
-                        <div class="quantityContainer">
-                            <p>Quantidade:</p>
-                            <span>10</span>
-                            <div class="quantityIcons">
-                                <figure>
-                                    <img src="assets/plus_circle_dark.svg" alt="Icone de mais">
-                                </figure>
-                                <figure>
-                                    <img src="assets/subs_circle_dark.svg" class="icon" alt="Icone de menos">
-                                </figure>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <div class="line productLine"></div>
-        </article>
-        <article class="product">
-            <section class="allInfos">
-                <img src="https://cdnm.westwing.com.br/glossary/uploads/br/2015/10/16182357/panelas-amarelas-pinterest-c-a4694.jpg" alt="Panela">
-                <div class="infos">
-                    <p>Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm</p>
-                    <div class="quantity">
-                        <p>R$ 29,99</p>
-                        <div class="quantityContainer">
-                            <p>Quantidade:</p>
-                            <span>10</span>
-                            <div class="quantityIcons">
-                                <figure>
-                                    <img src="assets/plus_circle_dark.svg" alt="Icone de mais">
-                                </figure>
-                                <figure>
-                                    <img src="assets/subs_circle_dark.svg" class="icon" alt="Icone de menos">
-                                </figure>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <div class="line productLine"></div>
-        </article>
-        <article class="product">
-            <section class="allInfos">
-                <img src="https://cdnm.westwing.com.br/glossary/uploads/br/2015/10/16182357/panelas-amarelas-pinterest-c-a4694.jpg" alt="Panela">
-                <div class="infos">
-                    <p>Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm Panela Wok Linha Aroma 24cm</p>
-                    <div class="quantity">
-                        <p>R$ 29,99</p>
-                        <div class="quantityContainer">
-                            <p>Quantidade:</p>
-                            <span>10</span>
-                            <div class="quantityIcons">
-                                <figure>
-                                    <img src="assets/plus_circle_dark.svg" alt="Icone de mais">
-                                </figure>
-                                <figure>
-                                    <img src="assets/subs_circle_dark.svg" class="icon" alt="Icone de menos">
-                                </figure>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <div class="line productLine"></div>
-        </article>
+        <section class="productList">
+            
+        </section>
         <section class="paymentInformation">
-            <p>
+            <p id="productLength">
                 600<br>
                 produtos
             </p>
             <div class="line paymentLine"></div>
-            <p>R$ 910.000,00</p>
+            <p id="paymentPrice">R$ </p>
             <section class="priceAndQuantityResponsive">
-                <p>
+                <p id="productLength">
                     600<br>
                     produtos
                 </p>
                 <div class="line paymentLine"></div>
-                <p>R$ 910.000,00</p>
+                <p id="paymentPrice">R$ </p>
             </section>
             <section class="btnsPayment">
                 <button>Finalizar compra</button>
-                <button>Limpar carrinho</button>
+                <button id="cleanCart">Limpar carrinho</button>
             </section>
-            <a href="#" class="moreProducts">
+            <a href="index.html" class="moreProducts">
                 <div></div>
                 <span>Ver mais produtos</span>
             </a>
