add clean cart button

--- a/shopcart.html
+++ b/shopcart.html
@@ -62,7 +62,7 @@
                 <p id="paymentPrice">R$ </p>
             </section>
             <section class="btnsPayment">
-                <button>Finalizar compra</button>
+                <button id="checkout">Finalizar compra</button>
                 <button id="cleanCart">Limpar carrinho</button>
             </section>
             <a href="index.html" class="moreProducts">
@@ -71,6 +71,14 @@
             </a>
         </section>
     </main>
+    <aside class="modalBackground">
+        <div class="flexModal">
+            <div class="buyModal">
+                <h2>Compra finalizada com sucesso!</h2>
+                <button>OK</button>
+            </div>
+        </div>
+    </aside>
     <footer>
         <nav>
             <a target="_blank" rel="external" href="https://www.instagram.com/">INSTAGRAM</a>
