add checkout button, but still missing the modal for the empty cart

--- a/product.html
+++ b/product.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="styles/product.css">
     <link rel="stylesheet" href="styles/configs.css">
     <link rel="stylesheet" href="styles/headerAndFooter.css">
+    <link rel="stylesheet" href="styles/modal.css">
     <title>Touch Store</title>
 </head>
 <body>
