--- a/shopcart.html
+++ b/shopcart.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="styles/configs.css">
     <link rel="stylesheet" href="styles/headerAndFooter.css">
     <link rel="stylesheet" href="styles/shopcart.css">
+    <link rel="stylesheet" href="styles/modal.css">
 </head>
 <body>
     <header>
