added search engine

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Touch Store</title>
     <script src="https://kit.fontawesome.com/bc7de74478.js" crossorigin="anonymous"></script>
     <script type="module" src="script/index.js" defer></script>
-    <script src="script/header.js" defer></script>
+    <script type="module" src="script/header.js" defer></script>
     <link rel="stylesheet" href="styles/index.css">
     <link rel="stylesheet" href="styles/headerAndFooter.css">
     <link rel="stylesheet" href="styles/configs.css">
@@ -56,7 +56,7 @@
             </div>
         </section>
         <section class="ProductsList">
-            <h2>PRODUTOS EM PROMOÇÃO</h2>
+            <h2 id="products">PRODUTOS EM PROMOÇÃO</h2>
             <div class="paragrathWithLines">
                 <div class="line"></div>
                 <p>Confira todos os produtos em promoção desta semana!</p>
