--- a/product.html
+++ b/product.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/bc7de74478.js" crossorigin="anonymous"></script>
     <script type="module" src="script/productPage.js" defer></script>
-    <script src="script/header.js" defer></script>
+    <script type="module" src="script/header.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
