making the responsive indexes

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                 <img src="https://images-americanas.b2w.io/spacey/acom/2021/10/29/3284286858d2-30.10-destaque-desk-01.png" alt="Imagem1">
                 <img src="https://images-americanas.b2w.io/spacey/acom/2021/10/29/fe5012e39a7d-30.10-destaque-desk-03.png" alt="Imagem2">
 
-                <button><i class="fas fa-angle-left"></i></button>
-                <button><i class="fas fa-angle-right"></i></button>
+                <article><button><i class="fas fa-angle-left"></i></button></article>
+                <article><button><i class="fas fa-angle-right"></i></button></article>
 
                 <div></div>
                 <div></div>
