making the slider buttons responsive

--- a/index.html
+++ b/index.html
@@ -51,8 +51,10 @@
                 <article><button><i class="fas fa-angle-left"></i></button></article>
                 <article><button><i class="fas fa-angle-right"></i></button></article>
 
-                <div></div>
-                <div></div>
+                <div class="indexes">
+                    <div></div>
+                    <div></div>
+                </div>
             </div>
         </section>
         <section class="ProductsList">
