--- a/index.html
+++ b/index.html
@@ -47,14 +47,13 @@
             <div class="imgsSlider">
                 <img src="https://images-americanas.b2w.io/spacey/acom/2021/10/29/3284286858d2-30.10-destaque-desk-01.png" alt="Imagem1">
                 <img src="https://images-americanas.b2w.io/spacey/acom/2021/10/29/fe5012e39a7d-30.10-destaque-desk-03.png" alt="Imagem2">
+            </div>
+            <button><i class="fas fa-angle-left"></i></button>
+            <button><i class="fas fa-angle-right"></i></button>
 
-                <article><button><i class="fas fa-angle-left"></i></button></article>
-                <article><button><i class="fas fa-angle-right"></i></button></article>
-
-                <div class="indexes">
-                    <div></div>
-                    <div></div>
-                </div>
+            <div class="indexes">
+                <div></div>
+                <div></div>
             </div>
         </section>
         <section class="ProductsList">
@@ -62,7 +61,7 @@
             <div class="paragrathWithLines">
                 <div class="line"></div>
                 <p>Confira todos os produtos em promoção desta semana!</p>
-                <div class="line"></div>
+                <div class="line"></div> 
             </div>
             <section class="products">
                 <!--Javascript-->
