--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <main>
         <section class="slider">
             <div class="imgsSlider">
-                <img src="https://images-americanas.b2w.io/spacey/acom/2021/10/29/3284286858d2-30.10-destaque-desk-01.png" alt="Imagem1">
+                <img id="a" src="https://images-americanas.b2w.io/spacey/acom/2021/10/29/3284286858d2-30.10-destaque-desk-01.png" alt="Imagem1">
                 <img src="https://images-americanas.b2w.io/spacey/acom/2021/10/29/fe5012e39a7d-30.10-destaque-desk-03.png" alt="Imagem2">
             </div>
             <section class="sliderComponents btnsSlider">
@@ -78,3 +78,4 @@
     </footer>
 </body>
 </html>
+
