full site, but lacking some retouching

--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
                 <p>Confira todos os produtos em promoção desta semana!</p>
                 <div class="line"></div> 
             </div>
+            <section class="notFound">
+                <strong>:(</strong> 
+                <p></p>
+            </section>
             <section class="products">
                 <!--Javascript-->
             </section>
