product section is now a list

--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
                 <strong>:(</strong> 
                 <p></p>
             </section>
-            <section class="products">
+            <ul class="products">
                 <!--Javascript-->
-            </section>
+            </ul>
         </section>
     </main>
     <footer>
