--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header>
         <h1><a href="index.html">Touch Store</a></h1>
         <div class="searchContainer">
-            <input placeholder="Procure algum produto..." type="text">
+            <input placeholder="Procure algum produto..." type="search">
             <button title="Busca"><i class="fas fa-search"></i></button>
         </div>
         <a href="shopcart.html" title="Carrinho" class="iconCart">
@@ -38,16 +38,16 @@
             </a>
         </section>
         <div class="searchContainer">
-            <input placeholder="Procure algum produto..." type="text">
+            <input placeholder="Procure algum produto..." type="search">
             <button><i title="Busca" class="fas fa-search"></i></button>
         </div>
     </header>
     <main>
         <section class="slider">
-            <div class="imgsSlider">
+            <ul class="imgsSlider">
                 <img id="a" src="https://images-americanas.b2w.io/spacey/acom/2021/10/29/3284286858d2-30.10-destaque-desk-01.png" alt="Imagem1">
                 <img src="https://images-americanas.b2w.io/spacey/acom/2021/10/29/fe5012e39a7d-30.10-destaque-desk-03.png" alt="Imagem2">
-            </div>
+            </ul>
             <button><i class="fas fa-angle-left"></i></button>
             <button><i class="fas fa-angle-right"></i></button>
 
