--- a/shopcart.html
+++ b/shopcart.html
@@ -22,7 +22,7 @@
     <header>
         <h1><a href="index.html">Touch Store</a></h1>
         <div class="searchContainer">
-            <input placeholder="Procure algum produto..." type="text">
+            <input placeholder="Procure algum produto..." type="search">
             <button title="Busca"><i class="fas fa-search"></i></button>
         </div>
         <a href="shopcart.html" title="Carrinho" class="iconCart">
@@ -39,7 +39,7 @@
             </a>
         </section>
         <div class="searchContainer">
-            <input placeholder="Procure algum produto..." type="text">
+            <input placeholder="Procure algum produto..." type="search">
             <button><i title="Busca" class="fas fa-search"></i></button>
         </div>
     </header>
