indexes is now a list

--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
             <button><i class="fas fa-angle-left"></i></button>
             <button><i class="fas fa-angle-right"></i></button>
 
-            <div class="indexes">
-                <div></div>
-                <div></div>
-            </div>
+            <ul class="indexes">
+                <li></li>
+                <li></li>
+            </ul>
         </section>
         <section class="ProductsList">
             <h2 id="products">PRODUTOS EM PROMOÇÃO</h2>
