I changed the informationHeader from div to header

--- a/shopcart.html
+++ b/shopcart.html
@@ -21,10 +21,10 @@
 <body>
     <header>
         <h1><a href="index.html">Touch Store</a></h1>
-        <div class="searchContainer">
+        <form class="searchContainer">
             <input placeholder="Procure algum produto..." type="search">
             <button title="Busca"><i class="fas fa-search"></i></button>
-        </div>
+        </form>
         <a href="shopcart.html" title="Carrinho" class="iconCart">
             <div class="cartQuantity">0</div>
             <i class="fas fa-shopping-cart"></i>
@@ -38,14 +38,14 @@
                 <i class="fas fa-shopping-cart"></i>
             </a>
         </section>
-        <div class="searchContainer">
+        <form class="searchContainer">
             <input placeholder="Procure algum produto..." type="search">
             <button><i title="Busca" class="fas fa-search"></i></button>
-        </div>
+        </form>
     </header>
     <main>
         <section class="productList">
-            
+            <!--Javascript-->
         </section>
         <section class="paymentInformation">
             <p id="productLength">
