--- a/product.html
+++ b/product.html
@@ -21,10 +21,10 @@
 <body>
     <header>
         <h1><a href="index.html">Touch Store</a></h1>
-        <div class="searchContainer">
+        <form class="searchContainer">
             <input placeholder="Procure algum produto..." type="search">
             <button title="Busca"><i class="fas fa-search"></i></button>
-        </div>
+        </form>
         <a href="shopcart.html" title="Carrinho" class="iconCart">
             <div class="cartQuantity">0</div>
             <i class="fas fa-shopping-cart"></i>
@@ -38,10 +38,10 @@
                 <i class="fas fa-shopping-cart"></i>
             </a>
         </section>
-        <div class="searchContainer">
+        <form class="searchContainer">
             <input placeholder="Procure algum produto..." type="search">
             <button><i title="Busca" class="fas fa-search"></i></button>
-        </div>
+        </form>
     </header>
     <main>
         <section class="imageAndInfos">
@@ -49,14 +49,14 @@
                 <img src="" alt="">
             </figure>
             <section class="information">
-                <div class="informationHeader">
+                <header class="informationHeader">
                     <a href="index.html" class="moreProducts" href="#">
                             <svg width="24" height="24" viewbox="0 0 24 24"xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd" fill="#56BFA1"><path d="M13.033 2v-2l10 3v18l-10 3v-2h-9v-7h1v6h8v-18h-8v7h-1v-8h9zm1 20.656l8-2.4v-16.512l-8-2.4v21.312zm-3.947-10.656l-3.293-3.293.707-.707 4.5 4.5-4.5 4.5-.707-.707 3.293-3.293h-9.053v-1h9.053z"/></svg>
                         Ver mais produtos
                     </a>
                     <h1></h1>
                     <h2>R$ </h2>
-                </div>
+                </header>
                 <div class="btnsProduct">
                     <button id="addBtn" class="buttonProduct">
                         ADICIONAR AO CARRINHO
