changed the product section of the cart to ul

--- a/shopcart.html
+++ b/shopcart.html
@@ -44,9 +44,9 @@
         </form>
     </header>
     <main>
-        <section class="productList">
+        <ul class="productList">
             <!--Javascript-->
-        </section>
+        </ul>
         <section class="paymentInformation">
             <p id="productLength">
                 600<br>
