--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://kit.fontawesome.com/bc7de74478.js" crossorigin="anonymous"></script>
     <script type="module" src="script/index.js"></script>
     <script type="module" src="script/header.js" defer></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="styles/index.css">
     <link rel="stylesheet" href="styles/headerAndFooter.css">
     <link rel="stylesheet" href="styles/configs.css">
@@ -18,30 +19,32 @@
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <h1><a href="index.html">Touch Store</a></h1>
-        <form class="searchContainer">
-            <input placeholder="Procure algum produto..." type="search">
-            <button title="Busca"><i class="fas fa-search"></i></button>
-        </form>
-        <a href="shopcart.html" title="Carrinho" class="iconCart">
-            <div class="cartQuantity">0</div>
-            <i class="fas fa-shopping-cart"></i>
-        </a>
-    </header>
-    <header class="phoneHeader">
-        <section>
+    <div id="headers">
+        <header id="mainHeader">
             <h1><a href="index.html">Touch Store</a></h1>
+            <form class="searchContainer">
+                <input placeholder="Procure algum produto..." type="search">
+                <button title="Busca"><i class="fas fa-search"></i></button>
+            </form>
             <a href="shopcart.html" title="Carrinho" class="iconCart">
                 <div class="cartQuantity">0</div>
                 <i class="fas fa-shopping-cart"></i>
             </a>
-        </section>
-        <form class="searchContainer">
-            <input placeholder="Procure algum produto..." type="search">
-            <button><i title="Busca" class="fas fa-search"></i></button>
-        </form>
-    </header>
+        </header>
+        <header id="phoneHeader" class="phoneHeader">
+            <section>
+                <h1><a href="index.html">Touch Store</a></h1>
+                <a href="shopcart.html" title="Carrinho" class="iconCart">
+                    <div class="cartQuantity">0</div>
+                    <i class="fas fa-shopping-cart"></i>
+                </a>
+            </section>
+            <form class="searchContainer">
+                <input placeholder="Procure algum produto..." type="search">
+                <button><i title="Busca" class="fas fa-search"></i></button>
+            </form>
+        </header>
+    </div>
     <main>
         <section class="slider">
             <ul class="imgsSlider">
