--- a/shopcart.html
+++ b/shopcart.html
@@ -19,54 +19,56 @@
     <link rel="stylesheet" href="styles/modal.css">
 </head>
 <body>
-    <header>
-        <h1><a href="index.html">Touch Store</a></h1>
-        <form class="searchContainer">
-            <input placeholder="Procure algum produto..." type="search">
-            <button title="Busca"><i class="fas fa-search"></i></button>
-        </form>
-        <a href="shopcart.html" title="Carrinho" class="iconCart">
-            <div class="cartQuantity">0</div>
-            <i class="fas fa-shopping-cart"></i>
-        </a>
-    </header>
-    <header class="phoneHeader">
-        <section>
+    <aside class="paymentAndHeader">
+        <header>
             <h1><a href="index.html">Touch Store</a></h1>
+            <form class="searchContainer">
+                <input placeholder="Procure algum produto..." type="search">
+                <button title="Busca"><i class="fas fa-search"></i></button>
+            </form>
             <a href="shopcart.html" title="Carrinho" class="iconCart">
                 <div class="cartQuantity">0</div>
                 <i class="fas fa-shopping-cart"></i>
             </a>
-        </section>
-        <form class="searchContainer">
-            <input placeholder="Procure algum produto..." type="search">
-            <button><i title="Busca" class="fas fa-search"></i></button>
-        </form>
-    </header>
-    <section class="paymentInformation">
-        <p id="productLength">
-            0<br>
-            produtos
-        </p>
-        <div class="line paymentLine"></div>
-        <p id="paymentPrice">R$ </p>
-        <section class="priceAndQuantityResponsive">
+        </header>
+        <header class="phoneHeader">
+            <section>
+                <h1><a href="index.html">Touch Store</a></h1>
+                <a href="shopcart.html" title="Carrinho" class="iconCart">
+                    <div class="cartQuantity">0</div>
+                    <i class="fas fa-shopping-cart"></i>
+                </a>
+            </section>
+            <form class="searchContainer">
+                <input placeholder="Procure algum produto..." type="search">
+                <button><i title="Busca" class="fas fa-search"></i></button>
+            </form>
+        </header>
+        <section class="paymentInformation">
             <p id="productLength">
                 0<br>
                 produtos
             </p>
             <div class="line paymentLine"></div>
             <p id="paymentPrice">R$ </p>
+            <section class="priceAndQuantityResponsive">
+                <p id="productLength">
+                    0<br>
+                    produtos
+                </p>
+                <div class="line paymentLine"></div>
+                <p id="paymentPrice">R$ </p>
+            </section>
+            <section class="btnsPayment">
+                <button id="checkout">Finalizar compra</button>
+                <button id="cleanCart">Limpar carrinho</button>
+            </section>
+            <a href="index.html" class="moreProducts">
+                <svg width="24" height="24" viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd" fill="#3E8A75"><path d="M13.033 2v-2l10 3v18l-10 3v-2h-9v-7h1v6h8v-18h-8v7h-1v-8h9zm1 20.656l8-2.4v-16.512l-8-2.4v21.312zm-3.947-10.656l-3.293-3.293.707-.707 4.5 4.5-4.5 4.5-.707-.707 3.293-3.293h-9.053v-1h9.053z"/></svg>
+                <span>Ver mais produtos</span>
+            </a>
         </section>
-        <section class="btnsPayment">
-            <button id="checkout">Finalizar compra</button>
-            <button id="cleanCart">Limpar carrinho</button>
-        </section>
-        <a href="index.html" class="moreProducts">
-            <svg width="24" height="24" viewbox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill-rule="evenodd" clip-rule="evenodd" fill="#3E8A75"><path d="M13.033 2v-2l10 3v18l-10 3v-2h-9v-7h1v6h8v-18h-8v7h-1v-8h9zm1 20.656l8-2.4v-16.512l-8-2.4v21.312zm-3.947-10.656l-3.293-3.293.707-.707 4.5 4.5-4.5 4.5-.707-.707 3.293-3.293h-9.053v-1h9.053z"/></svg>
-            <span>Ver mais produtos</span>
-        </a>
-    </section>
+    </aside>
     <main>
         <ul class="productList">
             <!--Javascript-->
