making limit modal

--- a/product.html
+++ b/product.html
@@ -96,6 +96,10 @@
                 <h2>Compra finalizada com sucesso!</h2>
                 <button>OK</button>
             </div>
+            <div class="buyModal" id="limitModal">
+                <h2>Você já atingiu o limite máximo da<br> quantidade desse produto!</h2>
+                <button>OK</button>
+            </div>
         </div>
     </aside>
     <footer>
