--- a/index.html
+++ b/index.html
@@ -1,85 +1,103 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Touch Store</title>
-    <script src="https://kit.fontawesome.com/bc7de74478.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/bc7de74478.js"
+      crossorigin="anonymous"
+    ></script>
     <script type="module" src="script/index.js"></script>
     <script type="module" src="script/header.js" defer></script>
-    <link rel="stylesheet" href="styles/index.css">
-    <link rel="stylesheet" href="styles/headerAndFooter.css">
-    <link rel="stylesheet" href="styles/configs.css">
-    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
-</head>
-<body>
+    <link rel="stylesheet" href="styles/index.css" />
+    <link rel="stylesheet" href="styles/headerAndFooter.css" />
+    <link rel="stylesheet" href="styles/configs.css" />
+    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lobster&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <header>
-        <h1><a href="index.html">Touch Store</a></h1>
-        <form class="searchContainer">
-            <input placeholder="Procure algum produto..." type="search">
-            <button title="Busca"><i class="fas fa-search"></i></button>
-        </form>
-        <a href="shopcart.html" title="Carrinho" class="iconCart">
-            <div class="cartQuantity">0</div>
-            <i class="fas fa-shopping-cart"></i>
-        </a>
+      <h1><a href="index.html">Touch Store</a></h1>
+      <form class="searchContainer">
+        <input placeholder="Procure algum produto..." type="search" />
+        <button title="Busca"><i class="fas fa-search"></i></button>
+      </form>
+      <a href="shopcart.html" title="Carrinho" class="iconCart">
+        <div class="cartQuantity">0</div>
+        <i class="fas fa-shopping-cart"></i>
+      </a>
     </header>
     <header class="phoneHeader">
-        <section>
-            <h1><a href="index.html">Touch Store</a></h1>
-            <a href="shopcart.html" title="Carrinho" class="iconCart">
-                <div class="cartQuantity">0</div>
-                <i class="fas fa-shopping-cart"></i>
-            </a>
-        </section>
-        <form class="searchContainer">
-            <input placeholder="Procure algum produto..." type="search">
-            <button><i title="Busca" class="fas fa-search"></i></button>
-        </form>
+      <section>
+        <h1><a href="index.html">Touch Store</a></h1>
+        <a href="shopcart.html" title="Carrinho" class="iconCart">
+          <div class="cartQuantity">0</div>
+          <i class="fas fa-shopping-cart"></i>
+        </a>
+      </section>
+      <form class="searchContainer">
+        <input placeholder="Procure algum produto..." type="search" />
+        <button><i title="Busca" class="fas fa-search"></i></button>
+      </form>
     </header>
     <main>
-        <section class="slider">
-            <ul class="imgsSlider">
-                <img id="a" src="https://images-americanas.b2w.io/spacey/acom/2021/10/29/3284286858d2-30.10-destaque-desk-01.png" alt="Imagem1">
-                <img src="https://images-americanas.b2w.io/spacey/acom/2021/10/29/fe5012e39a7d-30.10-destaque-desk-03.png" alt="Imagem2">
-            </ul>
-            <button><i class="fas fa-angle-left"></i></button>
-            <button><i class="fas fa-angle-right"></i></button>
+      <section class="slider">
+        <ul class="imgsSlider">
+          <img
+            src="assets/products/banners/banner-headphone.webp"
+            alt="Oferta! Fone de Ouvido 99 Reais à vista"
+          />
+          <img
+            src="assets/products/banners/banner-pan.webp"
+            alt="Oferta! Jogo de panelas 9 vezes de R$19,99"
+          />
+        </ul>
+        <button><i class="fas fa-angle-left"></i></button>
+        <button><i class="fas fa-angle-right"></i></button>
 
-            <ul class="indexes">
-                <li></li>
-                <li></li>
-            </ul>
+        <ul class="indexes">
+          <li></li>
+          <li></li>
+        </ul>
+      </section>
+      <section class="ProductsList">
+        <h2 id="products">PRODUTOS EM PROMOÇÃO</h2>
+        <div class="paragrathWithLines">
+          <div class="line"></div>
+          <p>Confira todos os produtos em promoção desta semana!</p>
+          <div class="line"></div>
+        </div>
+        <section class="notFound">
+          <strong>:(</strong>
+          <p>
+            <!--Javascript-->
+          </p>
         </section>
-        <section class="ProductsList">
-            <h2 id="products">PRODUTOS EM PROMOÇÃO</h2>
-            <div class="paragrathWithLines">
-                <div class="line"></div>
-                <p>Confira todos os produtos em promoção desta semana!</p>
-                <div class="line"></div> 
-            </div>
-            <section class="notFound">
-                <strong>:(</strong> 
-                <p></p>
-            </section>
-            <ul class="products">
-                <!--Javascript-->
-            </ul>
-        </section>
+        <ul class="products">
+          <!--Javascript-->
+        </ul>
+      </section>
     </main>
     <footer>
-        <nav>
-            <a target="_blank" rel="external" href="https://www.instagram.com/">INSTAGRAM</a>
-            <a href="shopcart.html">CARRINHO</a>
-            <a href="index.html">INÍCIO</a>
-        </nav>
-        <p>Touch Store &copy; 2021</p>
+      <nav>
+        <a target="_blank" rel="external" href="https://www.instagram.com/"
+          >INSTAGRAM</a
+        >
+        <a href="shopcart.html">CARRINHO</a>
+        <a href="index.html">INÍCIO</a>
+      </nav>
+      <p>Touch Store &copy; 2021</p>
     </footer>
-</body>
+  </body>
 </html>
-
